src/syntactic_analysis/snapshots/crawfish__syntactic_analysis__parser__tests__parser_output@block.crw.snap
---
source: src/syntactic_analysis/parser.rs
assertion_line: 614
expression: dump
input_file: src/syntactic_analysis/snapshot_inputs/block.crw
---
File@0..23
  FunctionDefinition@0..23
    Func@0..4 "func"
    Whitespace@4..5 " "
    Identifier@5..6 "f"
    ParameterList@6..9
      OpenParen@6..7 "("
      CloseParen@7..8 ")"
      Whitespace@8..9 " "
    Block@9..23
      OpenBrace@9..10 "{"
      Whitespace@10..15 "\n    "
      ExpressionStatement@15..21
        BinaryOperation@15..21
          IntegerLiteral@15..17
            Integer@15..16 "1"
            Whitespace@16..17 " "
          Plus@17..18 "+"
          Whitespace@18..19 " "
          IntegerLiteral@19..21
            Integer@19..20 "2"
            Whitespace@20..21 "\n"
      CloseBrace@21..22 "}"
      Whitespace@22..23 "\n"
