src/syntactic_analysis/snapshots/crawfish__syntactic_analysis__parser__tests__parser_output@integer_literal.crw.snap
---
source: src/syntactic_analysis/parser.rs
assertion_line: 614
expression: dump
input_file: src/syntactic_analysis/snapshot_inputs/integer_literal.crw
---
File@0..21
  FunctionDefinition@0..21
    Func@0..4 "func"
    Whitespace@4..5 " "
    Identifier@5..6 "f"
    ParameterList@6..9
      OpenParen@6..7 "("
      CloseParen@7..8 ")"
      Whitespace@8..9 " "
    Block@9..21
      OpenBrace@9..10 "{"
      Whitespace@10..15 "\n    "
      ExpressionStatement@15..19
        IntegerLiteral@15..17
          Integer@15..17 "42"
        Semicolon@17..18 ";"
        Whitespace@18..19 "\n"
      CloseBrace@19..20 "}"
      Whitespace@20..21 "\n"
