src/syntactic_analysis/snapshots/crawfish__syntactic_analysis__parser__tests__parser_output@loop.crw.snap
---
source: src/syntactic_analysis/parser.rs
assertion_line: 614
expression: dump
input_file: src/syntactic_analysis/snapshot_inputs/loop.crw
---
File@0..93
  FunctionDefinition@0..37
    Func@0..4 "func"
    Whitespace@4..5 " "
    Identifier@5..9 "main"
    ParameterList@9..12
      OpenParen@9..10 "("
      CloseParen@10..11 ")"
      Whitespace@11..12 " "
    Block@12..37
      OpenBrace@12..13 "{"
      Whitespace@13..18 "\n    "
      ExpressionStatement@18..30
        InfiniteLoop@18..30
          Loop@18..22 "loop"
          Whitespace@22..23 " "
          Block@23..30
            OpenBrace@23..24 "{"
            CloseBrace@24..25 "}"
            Whitespace@25..30 "\n    "
      ExpressionStatement@30..34
        UnaryOperation@30..32
          Minus@30..31 "-"
          IntegerLiteral@31..32
            Integer@31..32 "1"
        Semicolon@32..33 ";"
        Whitespace@33..34 "\n"
      CloseBrace@34..35 "}"
      Whitespace@35..37 "\n\n"
  FunctionDefinition@37..93
    Func@37..41 "func"
    Whitespace@41..42 " "
    Identifier@42..43 "g"
    ParameterList@43..46
      OpenParen@43..44 "("
      CloseParen@44..45 ")"
      Whitespace@45..46 " "
    Block@46..93
      OpenBrace@46..47 "{"
      Whitespace@47..52 "\n    "
      LetStatement@52..91
        Let@52..55 "let"
        Whitespace@55..56 " "
        Identifier@56..57 "x"
        Whitespace@57..58 " "
        Equal@58..59 "="
        Whitespace@59..60 " "
        InfiniteLoop@60..89
          Loop@60..64 "loop"
          Whitespace@64..65 " "
          Block@65..89
            OpenBrace@65..66 "{"
            Whitespace@66..75 "\n        "
            BreakExpression@75..88
              Break@75..80 "break"
              Whitespace@80..81 " "
              IntegerLiteral@81..82
                Integer@81..82 "5"
              Semicolon@82..83 ";"
              Whitespace@83..88 "\n    "
            CloseBrace@88..89 "}"
        Semicolon@89..90 ";"
        Whitespace@90..91 "\n"
      CloseBrace@91..92 "}"
      Whitespace@92..93 "\n"
